# deepiri-topolsea

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
crates/dv-bench/: Cargo.toml
crates/dv-bench/benches/: index_bench.rs  recall_bench.rs
crates/dv-bench/src/: commercial_proof.rs  lib.rs
crates/dv-bindings-python/: Cargo.toml
crates/dv-bindings-python/src/: client.rs  collection.rs  lib.rs
crates/dv-cli/: Cargo.toml
crates/dv-cli/src/: main.rs
crates/dv-index-api/: Cargo.toml
crates/dv-index-api/src/: lib.rs  traits.rs
crates/dv-index-flat/: Cargo.toml
crates/dv-index-flat/src/: index.rs  lib.rs
crates/dv-index-hnsw/: Cargo.toml
crates/dv-index-hnsw/src/: graph.rs  index.rs  lib.rs
crates/dv-index-zcolumn/: Cargo.toml
crates/dv-index-zcolumn/src/: column.rs  compact.rs  explain.rs  grid.rs  index.rs  ledger.rs  lib.rs  predictor.rs  projection.rs  quant.rs  routing.rs  search.rs
crates/dv-metadata/: Cargo.toml
crates/dv-metadata/src/: filter.rs  lib.rs  store.rs
crates/dv-metrics/: Cargo.toml
crates/dv-metrics/src/: batch.rs  column_scan.rs  lib.rs  quantized.rs  scalar.rs  simd_l2_u8.rs
crates/dv-query/: Cargo.toml
crates/dv-query/src/: collection.rs  database.rs  lib.rs  planner.rs  query.rs  shard.rs  shard_server.rs
crates/dv-query/tests/: integration.rs  shard_integration.rs  zcolumn_integration.rs
crates/dv-shard-remote/: Cargo.toml
crates/dv-shard-remote/src/: client.rs  coordinator.rs  lib.rs  protocol.rs
crates/dv-storage/: Cargo.toml
crates/dv-storage/src/: column_format.rs  column_segment.rs  format.rs  lib.rs  segment.rs  shard_format.rs  store.rs
crates/dv-topk/: Cargo.toml
crates/dv-topk/src/: heap.rs  lib.rs
crates/dv-types/: Cargo.toml
crates/dv-types/src/: config.rs  distance.rs  error.rs  id.rs  lib.rs  quant.rs  result.rs  vector.rs
deepiri_topolsea/: __init__.py  _pure.py  client.py  collection.py  types.py
docs/: Z_COLUMN_PROTOCOL.md  deepiri_vector_search_implementation_plan.md
tests/: test_client.py  test_pure.py  test_zcolumn.py
