[workspace]
members = [
    "crates/dv-types",
    "crates/dv-metrics",
    "crates/dv-topk",
    "crates/dv-index-api",
    "crates/dv-index-flat",
    "crates/dv-index-hnsw",
    "crates/dv-index-zcolumn",
    "crates/dv-storage",
    "crates/dv-metadata",
    "crates/dv-query",
    "crates/dv-shard-remote",
    "crates/dv-bench",
    "crates/dv-bindings-python",
    "crates/dv-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rayon = "1"
rand = "0.8"
approx = "0.5"
tempfile = "3"
criterion = "0.5"
clap = { version = "4", features = ["derive"] }
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
