[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "deepiri-topolsea"
version = "0.1.0"
description = "Production-grade vector database engine — HNSW ANN search, flat exact index, persistence, and metadata filtering"
authors = ["Deepiri"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "deepiri_topolsea" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
pydantic = "^2.0"
typing-extensions = "^4.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.3"
mypy = "^1.9"
black = "^24.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
