[package]
name = "dv-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "topolsea"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
dv-metadata = { path = "../dv-metadata" }
dv-query = { path = "../dv-query" }
dv-types = { path = "../dv-types" }
serde_json = { workspace = true }
