[package]
name = "dv-query"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dv-index-api = { path = "../dv-index-api" }
dv-index-flat = { path = "../dv-index-flat" }
dv-index-hnsw = { path = "../dv-index-hnsw" }
dv-metadata = { path = "../dv-metadata" }
dv-storage = { path = "../dv-storage" }
dv-types = { path = "../dv-types" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
