[package]
name = "dv-shard-remote"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dv-types = { path = "../dv-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { version = "2", default-features = false, features = ["json"] }
rayon = { workspace = true }

[dev-dependencies]
tempfile = "3"
